# spend-fuse

./: .gitignore  LICENSE  README.md  pyproject.toml
spendfuse/: __init__.py  cli.py  config.py  engine.py  eventlog.py  scenarios.py
spendfuse/actions/: __init__.py  base.py  kill_process.py  shell_command.py  webhook.py
spendfuse/sources/: __init__.py  aws_cost_explorer.py  base.py  simulated.py
tests/: test_actions.py  test_config.py  test_engine.py  test_simulated_source.py
